--- a/project1/html.html
+++ b/project1/html.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<body>
-		<h1>%myserver 6560 </h1></body></html>
+    <head>
+        <title>Testing</title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <p>
+            <strong>Please..!</strong>
+        </p>
+
+        <img src="test_image.png">
+
+        <script src="index.js"></script>
+    </body>
+</html>
