--- a/project1/html.html
+++ b/project1/html.html
@@ -1,16 +1,6 @@
 <!doctype html>
 <html>
     <head>
-        <title>Testing</title>
-        <link rel="stylesheet" href="index.css">
+        <title>%myserver 6560</title>
     </head>
-    <body>
-        <p>
-            <strong>Please..!</strong>
-        </p>
-
-        <img src="test_image.png">
-
-        <script src="index.js"></script>
-    </body>
 </html>
