--- a/submit/html.html
+++ b/submit/html.html
@@ -3,4 +3,9 @@
     <head>
         <title>%myserver 6560</title>
     </head>
+    <body>
+        <p>
+            <strong>%myserver 6560</strong>
+        </p>
+    </body>
 </html>
