--- a/submit/html.html
+++ b/submit/html.html
@@ -7,6 +7,6 @@
         <p>
             <strong>%myserver 6560</strong>
         </p>
-        <img src="IMG.JPG">
+        <img src="IMG.JPG" height="180" width="180" >
     </body>
 </html>
