--- a/submit/html.html
+++ b/submit/html.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>%myserver 6560</title>
+        <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
     <body>
         <p>
