--- a/submit/html.html
+++ b/submit/html.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title>%myserver 6560</title>
+        <title>kooooooongyaaaaaaaa</title>
         <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     </head>
     <body>
         <p>
-            <strong>%myserver 6560</strong>
+            <strong>myserver</strong>
         </p>
         <img src="IMG.JPG" height="180" width="180" >
     </body>
