--- a/submit/html.html
+++ b/submit/html.html
@@ -9,5 +9,9 @@
             <strong>myserver</strong>
         </p>
         <img src="IMG.JPG" height="180" width="180" >
+        <audio controls autoplay>
+            <source src="/file_voice/sample.mp3" type="audio/mp3">
+        </audio>
+        
     </body>
 </html>
